updated hero to fix spacing, updated cards block to accomodate two different styles

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -15,111 +15,7 @@
   max-width: 70rem;
 }
 
-.cards.icon > ul {
-  display: grid;
-  grid-template-columns: repeat(20, 1fr);
-  column-gap: 2rem;
-  row-gap: 3rem;
-}
-
-.cards > ul > a {
-  display: block;
-  min-width: fit-content;
-  min-height: 90px;
-  text-align: center;
-  border: 1px solid var(--dark-color);
-  background-color: var(--background-color);
-  padding: 32px 16px;
-  border-radius: 0.5rem;
-  background-color: var(--background-color);
-}
-
-.cards > ul > a:nth-of-type(1),
-.cards > ul > a:nth-of-type(2),
-.cards > ul > a:nth-of-type(3),
-.cards > ul > a:nth-of-type(4) {
-  grid-column: span 5;
-  grid-row: 1;
-}
-
-.cards > ul > a:nth-of-type(5),
-.cards > ul > a:nth-of-type(6),
-.cards > ul > a:nth-of-type(7),
-.cards > ul > a:nth-of-type(8),
-.cards > ul > a:nth-of-type(9) {
-  grid-column: span 4;
-  grid-row: 2;
-}
-
-/* icon card hover styles */
-.cards > ul > a:hover {
-  outline: var(--link-hover-color) solid .125rem;
-  background-color: var(--link-hover-color);
-  cursor: pointer;
-  border-radius: 0.5rem;
-  border-color: var(--link-hover-color);
-  color: var(--light-color);
-  text-decoration: none;
-}
-
-.cards > ul > a:hover > li > .cards-card-body > p {
-  text-decoration: underline;
-  color: var(--light-color);
-  text-underline-position: under;
-}
-
-.cards a:hover .cards-card-icon img {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(175deg) brightness(103%) contrast(101%);
-}
-
-.cards > ul > a > li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.cards > ul > a > li > .cards-hide-markdown {
-  display: none;
-}
-
-.cards .cards-card-body {
-  margin: 16px 0 0 0;
-  min-width: 5rem;
-  width: 100%;
-  color: var(--text-color);
-}
-
-.cards > ul > a > li > .cards-card-body > p {
-  font-size: 1.25rem;
-  line-height: 1.5rem;
-  font-weight: 600;
-  letter-spacing: 0.02rem;
-  width: fit-content;
-  margin: 0 auto;
-  border-bottom: 2px solid transparent;
-}
-
-/* card icon styles */
-.cards .cards-card-icon p {
-  margin: 0;
-  height: 40px;
-}
-
-.cards .cards-card-icon span {
-  width: 40px;
-  height: 40px;
-}
-
-
-.cards .cards-card-icon img {
-  line-height: 0;
-  display: block;
-  width: 40px;
-  height: 40px;
-  filter: invert(10%) sepia(67%) saturate(3125%) hue-rotate(218deg) brightness(109%) contrast(115%);
-}
-
+/* default card with image styles */
 .cards .cards-card-image {
   line-height: 0;
 }
@@ -132,4 +28,113 @@
   width: 100%;
   aspect-ratio: 4 / 3;
   object-fit: cover;
+}
+
+/* icon cards styles */
+.cards.icon > ul {
+  display: grid;
+  grid-template-columns: repeat(20, 1fr);
+  column-gap: 2rem;
+  row-gap: 3rem;
+}
+
+.cards.icon > ul > a {
+  display: block;
+  min-width: fit-content;
+  min-height: 90px;
+  text-align: center;
+  border: 1px solid var(--dark-color);
+  background-color: var(--background-color);
+  padding: 32px 16px;
+  border-radius: 0.5rem;
+  background-color: var(--background-color);
+}
+
+.cards.icon > ul > a:nth-of-type(1),
+.cards.icon > ul > a:nth-of-type(2),
+.cards.icon > ul > a:nth-of-type(3),
+.cards.icon > ul > a:nth-of-type(4) {
+  grid-column: span 5;
+  grid-row: 1;
+}
+
+.cards.icon > ul > a:nth-of-type(5),
+.cards.icon > ul > a:nth-of-type(6),
+.cards.icon > ul > a:nth-of-type(7),
+.cards.icon > ul > a:nth-of-type(8),
+.cards.icon > ul > a:nth-of-type(9) {
+  grid-column: span 4;
+  grid-row: 2;
+}
+
+/* icon card hover styles */
+.cards.icon > ul > a:hover {
+  outline: var(--link-hover-color) solid .125rem;
+  background-color: var(--link-hover-color);
+  cursor: pointer;
+  border-radius: 0.5rem;
+  border-color: var(--link-hover-color);
+  color: var(--light-color);
+  text-decoration: none;
+}
+
+.cards.icon > ul > a:hover > li > .cards-card-body > p {
+  text-decoration: underline;
+  color: var(--light-color);
+  text-underline-position: under;
+}
+
+.cards.icon a:hover .cards-card-icon img {
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(175deg) brightness(103%) contrast(101%);
+}
+
+.cards.icon > ul > a > li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.cards > ul > a > li > .cards-hide-markdown {
+  display: none;
+}
+
+.cards.icon .cards-card-body {
+  margin: 16px 0 0 0;
+  min-width: 5rem;
+  width: 100%;
+  color: var(--text-color);
+}
+
+.cards.icon > ul > a > li > .cards-card-body > p {
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+  font-weight: 600;
+  letter-spacing: 0.02rem;
+  width: fit-content;
+  margin: 0 auto;
+  border-bottom: 2px solid transparent;
+}
+
+.cards.icon .cards-card-icon p {
+  margin: 0;
+  height: 40px;
+}
+
+.cards.icon .cards-card-icon span {
+  width: 40px;
+  height: 40px;
+}
+
+.cards.icon .cards-card-icon img {
+  line-height: 0;
+  display: block;
+  width: 40px;
+  height: 40px;
+  filter: invert(10%) sepia(67%) saturate(3125%) hue-rotate(218deg) brightness(109%) contrast(115%);
+}
+
+/* featured-stories cards styles */
+.cards.featured-stories {
+  padding: 0;
 }
