--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -6,15 +6,41 @@ main .hero-container {
   padding: 0;
 }
 
-.hero {
+/* hero container & image positioning for full-bleed */
+.hero > div > div > p  {
   position: relative;
-  min-height: 300px;
+  min-height: 555px;
+  margin: 0;
 }
 
-.hero .hero-text-wrapper {
+.hero .hero-image-wrapper {
   position: absolute;
-  top: 5rem;
-  left: 2.5rem;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.hero .hero-image-wrapper picture {
+  inset: 0;
+  box-sizing: border-box;
+}
+
+.hero img {
+  object-fit: cover;
+  width: 100%;
+  height: 555px;
+  display: inline-block;
+}
+
+/* hero content positioning */
+.hero div > div > p > .hero-content-wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 80px 0;
+}
+
+/* controls styles of white text box */
+.hero .hero-text-wrapper {
   background-color: var(--light-color);
   width: fit-content;
   padding: 1.5rem;
@@ -50,23 +76,5 @@ main .hero-container {
   max-width: 400px;
 }
 
-.hero > div > div > p  {
-  position: relative;
-  display: block;
-  width: 100%;
-}
-
-.hero picture {
-  z-index: -1;
-  inset: 0;
-  object-fit: cover;
-  box-sizing: border-box;
-}
-
-.hero img {
-  object-fit: cover;
-  width: 100%;
-  height: 555px
-}
 
 
