--- a/styles/styles.css
+++ b/styles/styles.css
@@ -220,3 +220,7 @@ main .section.highlight {
   padding-top: 0;
   padding-bottom: 0;
 }
+
+.cards-container.highlight {
+  padding: 80px 0;
+}
